<resources>
    <string name="app_name">FuncratePlanningpoker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_subtitle">Just for fun!</string>
    <string name="navigation_drawer_title">Funcrate</string>
    <string name="navigation_drawer_settings">Settings</string>
    <string name="navigation_drawer_blog">Blog</string>
    <string name="navigation_drawer_about">About</string>
    <string name="navigation_drawer_home">Home</string>

    <string name="fragment_about_title">About page!</string>
    <string name="fragment_settings_title">Settings page!</string>
    <string name="fragment_about_desc">Description of the about page.</string>
    <string name="fragment_settings_desc">Settings…</string>
    <string name="fragment_blog_title">Blog page!</string>
    <string name="fragment_blog_desc">Description of blog page.</string>
    <string name="fragment_main_title">Welcome!</string>
    <string name="button_scan">Scan QR code!</string>
    <string name="simple_scanner_activity">Scan FunCrate QR code!</string>
    <string name="fragment_main_qr_title">QR scanner</string>
    <string name="fragment_main_qr_desc">Press the button below to scan the host-generated URL. With this URL, you will join the game lobby!</string>
    <string name="fragment_main_manual_title">Manual</string>
    <string name="fragment_main_manual_desc">Enter the host-generated URL below. Hit the "join" button to join the game lobby!</string>
    <string name="hint_url">http://funcrate.nl/…</string>
    <string name="button_join">Join!</string>
    <string name="enter_name_title">Username</string>
    <string name="enter_name_desc">Please enter your name below. This name will be visible to other users.</string>
    <string name="hint_username">My Name</string>
    <string name="button_confirm">Confirm</string>

    <string name="ready_title">Are you ready?</string>
    <string name="ready_description">Let your friends know whether you\'re ready or not!</string>
    <string name="button_ready">Ready!</string>
    <string name="button_unready">Not ready</string>
    <string name="wait_title">The game will start soon…</string>
    <string name="wait_description">Please wait while the host enters all of the required information.</string>

    <string name="button_send">Send!</string>
    <string name="cardpick_title">Pick your card!</string>
    <string name="cardpick_description">Click on a card to select it. When you\'re sure of your decision, hit send!</string>
    <string name="wait2_title">Wait till next round...</string>
    <string name="wait2_description">The host is now busy filling in information...</string>
</resources>
