<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.funcrate.funcrateplanningpoker.MainFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <!-- :nextFocusUp and :nextFocusLeft have been set to the id of this component
            to prevent the dummy from receiving focus again -->
        <AutoCompleteTextView
            android:id="@+id/autotext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:nextFocusLeft="@id/autotext"
            android:nextFocusUp="@id/autotext"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="12dp"
                android:paddingTop="6dp"
                android:text="@string/fragment_main_title"
                android:textSize="40sp"
                android:textStyle="bold" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_large"
                        android:layout_marginRight="@dimen/spacing_large"
                        android:layout_marginTop="@dimen/spacing_large"
                        android:text="@string/fragment_main_qr_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_large"
                        android:layout_marginRight="@dimen/spacing_large"
                        android:text="@string/fragment_main_qr_desc"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                    <Button
                        android:id="@+id/btnScan"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="75dp"
                        android:layout_margin="@dimen/spacing_large"
                        android:text="@string/button_scan" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/manualTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_large"
                        android:layout_marginRight="@dimen/spacing_large"
                        android:layout_marginTop="@dimen/spacing_large"
                        android:text="@string/fragment_main_manual_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

                    <TextView
                        android:id="@+id/manualDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_large"
                        android:layout_marginRight="@dimen/spacing_large"
                        android:text="@string/fragment_main_manual_desc"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                    <EditText
                        android:id="@+id/etManualURL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_large"
                        android:layout_marginRight="@dimen/spacing_large"
                        android:hint="@string/hint_url"
                        android:inputType="textPersonName"
                        android:nextFocusLeft="@id/etManualURL"
                        android:nextFocusUp="@id/etManualURL" />

                    <Button
                        android:id="@+id/btnJoin"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="75dp"
                        android:layout_margin="@dimen/spacing_large"
                        android:text="@string/button_join" />
                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>

    </FrameLayout>
</ScrollView>
